tests/compile_fail/dimension_annotation_with_unit_not_allowed.stderr
error: Type error in annotation: Expected dimension, found unit 'kilograms'.
  --> tests/compile_fail/dimension_annotation_with_unit_not_allowed.rs:12:15
   |
12 |     unit foo: kilograms = kilograms;
   |               ^^^^^^^^^
   |
   = note: Annotations can only be done using dimensions.
